<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_recipe"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_recipes" />

    <item
        android:id="@+id/navigation_planner"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_planner" />

    <item
        android:id="@+id/navigation_blog"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_blog" />

    <item
        android:id="@+id/navigation_social"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_contact"
        android:visible="false"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_profile"
        android:visible="false" />
</menu>