<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_recipe">

    <fragment
        android:id="@+id/navigation_recipe"
        android:name="miu.edu.foodieapp.ui.recipe.RecipesFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/navigation_planner"
        android:name="miu.edu.foodieapp.ui.planner.PlannerFragment"
        android:label="@string/title_planner"
        tools:layout="@layout/fragment_planner" />

    <fragment
        android:id="@+id/navigation_blog"
        android:name="miu.edu.foodieapp.ui.blog.BlogFragment"
        android:label="@string/title_blog"
        tools:layout="@layout/fragment_blog" />

    <fragment
        android:id="@+id/navigation_social"
        android:name="miu.edu.foodieapp.ui.social.SocialFragment"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_social" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="miu.edu.foodieapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>